--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>HTML Semantic Elements</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="SVGd1Toc6qsRyMwilSsUHyQdYpwhlvZSMF4Wzj8SUGg" />
+</head>
 <body>
   <h2>
     GTA San Andreas Mod APK Modhello Unduh Gratis untuk Android Versi Terbaru 📲
